--- a/unpackaged/pre/classes/SurveyVersionModel.cls
+++ b/unpackaged/pre/classes/SurveyVersionModel.cls
@@ -9,12 +9,12 @@ public class SurveyVersionModel {
     }
     
     public SurveyVersion__c toSObject(Id surveyId) {
-        SurveyVersion__c version = new SurveyVersion__c(
+        return new SurveyVersion__c(
+            Id = this.recordId,
             Survey__c = surveyId,
             VersionNumber__c = this.versionNumber,
             IsActive__c = this.isActive
         );
-        return version;
     }
     
     public static SurveyVersionModel fromSObject(SurveyVersion__c version) {
@@ -22,6 +22,14 @@ public class SurveyVersionModel {
         model.recordId = version.Id;
         model.versionNumber = version.VersionNumber__c;
         model.isActive = version.IsActive__c;
+        
+        // Process nested pages
+        if (version.Pages__r != null) {
+            for (Page__c page : version.Pages__r) {
+                model.pages.add(PageModel.fromSObject(page));
+            }
+        }
+        
         return model;
     }
 } 
